--- a/src/Example/example.fsproj
+++ b/src/Example/example.fsproj
@@ -14,8 +14,11 @@
     <RunWorkingDirectory>$(OutputPath)\netcoreapp3.0</RunWorkingDirectory>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="paket.references" />
+    <Compile Include="Exif.fs" />
+    <Compile Include="opencv.fs" />
+    <Compile Include="Raw.fs" />
     <Compile Include="Program.fs" />
+    <None Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\lensfun-net\lensfun-net.fsproj" />
