--- a/src/Example/example.fsproj
+++ b/src/Example/example.fsproj
@@ -17,6 +17,7 @@
     <Compile Include="Exif.fs" />
     <Compile Include="opencv.fs" />
     <Compile Include="Raw.fs" />
+    <Compile Include="Tool.fs" />
     <Compile Include="Program.fs" />
     <None Include="paket.references" />
   </ItemGroup>
