--- a/src/undistort/undistort.fsproj
+++ b/src/undistort/undistort.fsproj
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+	<PackAsTool>true</PackAsTool>
+    <ToolCommandName>undistort</ToolCommandName>
+	<PackageOutputPath>..\..\bin\</PackageOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>..\..\bin\Debug\</OutputPath>
@@ -10,13 +13,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <OutputPath>..\..\bin\Release</OutputPath>
   </PropertyGroup>
-  <PropertyGroup>
-    <RunWorkingDirectory>$(OutputPath)\netcoreapp3.0</RunWorkingDirectory>
-  </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Raw.fs" />
     <Compile Include="Program.fs" />
-    <None Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\lensfun-net-utilities\lensfun-net-utilities.fsproj" />
