--- a/src/undistort/undistort.fsproj
+++ b/src/undistort/undistort.fsproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <DisableImplicitFSharpCoreReference>True</DisableImplicitFSharpCoreReference>
 	<PackAsTool>true</PackAsTool>
     <ToolCommandName>undistort</ToolCommandName>
 	<PackageOutputPath>..\..\bin\</PackageOutputPath>
